# Tonalizer-Dynamic-Resonance-Control-

./: .gitignore  CMakeLists.txt
docs/: user-guide.md
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/dsp/: BandOverlay.cpp  BandOverlay.h  DetectionEngine.cpp  DetectionEngine.h  PitchDetector.cpp  PitchDetector.h  SpectralEraser.cpp  SpectralEraser.h  SpectralMorpher.cpp  SpectralMorpher.h  StereoLinker.h
src/model/: MusicalScale.cpp  MusicalScale.h  Parameters.cpp  Parameters.h  TonalClassifier.cpp  TonalClassifier.h
src/ui/: DotMatrixDisplay.cpp  DotMatrixDisplay.h  EraseKnob.cpp  EraseKnob.h  KeyScaleSelector.cpp  KeyScaleSelector.h  LookAndFeel.cpp  LookAndFeel.h
